# maemo-security-certman

./: .gitignore  Makefile  Makefile-noam  Makefile.am  autogen.sh  configure.ac
debian/: changelog  control  copyright  files  libmaemosec-certman-dev.files  libmaemosec-certman0-dev.dirs  libmaemosec-certman0-dev.install  libmaemosec-certman0.files  libmaemosec-certman0.install  libmaemosec-certman0.postinst  libmaemosec-certman0.preinst  libmaemosec-dev.files  libmaemosec-dev.install  libmaemosec0.dirs  libmaemosec0.files  libmaemosec0.install  libmaemosec0.postinst  maemo-security-certman.dirs  maemo-security-certman.install  maemosec-certman-common-ca.dirs  maemosec-certman-common-ca.install  maemosec-certman-common-ca.postinst  maemosec-certman-tools.install  maemosec-certman-tools.postinst  rules
doc/: doxygen.cfg
etc/: maemosec-certman-cryptoki.conf  ngcm_cryptoki.conf
etc/certs/common-ca/: Nokia.1.pem
etc/certs/trusted/: root.ca
etc/osso-backup/applications/: maemosec-certman.conf
etc/secure/: maemosec-certman.common-ca
etc/secure/s/: certman.blacklist  certman.common-ca  certman.location-proxy
include/: libbb5.h  libbb5stub.h  libcertman.h  maemosec_certman.h  maemosec_common.h  maemosec_storage.h  sec_common.h  sec_storage.h
lib/: Makefile  Makefile.am
lib/certman/: Makefile  Makefile.am  certman_main.cpp  cryptoki_config.cpp  cryptoki_config.h  cryptoki_module.c  cryptoki_module.h  ngcm.cpp  ngcm_config.cpp  ngcm_config.h  ngcm_cryptoki.c  ngcm_cryptoki.h  ngcm_main.cpp  ngcm_x509_cert.cpp  ngcm_x509_cert.h  pkcs11f-partial.h  x509_container.cpp  x509_container.h
lib/libbb5/: Makefile  Makefile.am  libbb5.c  libbb5stub.cpp
lib/security/: Makefile  Makefile.am  c_farray  c_fstring.cpp  c_fstring.h  c_map.cpp  c_map.h  c_wordlist.cpp  c_wordlist.h  c_xmldoc.cpp  c_xmldoc.h  c_xmlnode.cpp  c_xmlnode.h  dlog_send.c  libbb5.h  libbb5stub.cpp  libbb5stub.h  maemosec_common.cpp  maemosec_storage.cpp  sec_common.cpp  sec_storage.cpp
make/: Makefile.inc
pkgconfig/: maemosec-certman.pc.in  maemosec.pc.in
updateca/: Makefile  parse-certdata-txt.c  updateca.txt
